# unyt-sandbox-tx5

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: release-tauri-app.yaml
.github/workflows/ISSUE_TEMPLATE/: bug_report_2.yml
docs/: scratch-pag.md  signing.md  template-use.md
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  generated_arc_factor.rs  lib.rs  push_notifications.rs  tauri_config_reader.rs  utils.rs
src-tauri/src/menu/: about.rs  mod.rs
src-tauri/src/push_notifications/: android_logs.rs
src-tauri/tests/: migration.rs
testing_docs/: 1_0_invite.md  1_0_testing_plan.md  1_2_phase_1_testing_details.md  2_0_phase_2_testing_details.md  3_0_phase_3_testing_details.md  4_0_phase_4_testing_details.md  4_1_intro_to_smart_agreements.md  4_2_unyt-dictionary.md  5_0_Smart_Agreement_Release.md  5_0_Smart_Agreements_README.md  5_0_phase_5_testing_details.md
