[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace]
members = ["src-tauri"]
resolver = "2"


# [patch.crates-io]
# wasmer-vm = { git = "https://github.com/guillemcordoba/wasmer", branch = "fix-x86" }
# wasmer-types = { git = "https://github.com/guillemcordoba/wasmer", branch = "fix-x86" }
# kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
# kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
# kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
# kitsune2_dht = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
# kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
# kitsune2_bootstrap_client = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }