[package]
name = "unyt-tauri"
version = "0.0.0"
description = "Unyt"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "devtools"] }
tauri-plugin-holochain = { git = "https://github.com/darksoil-studio/tauri-plugin-holochain", branch = "main-0.5" }
holochain_types = { version = "0.5.0" }
holochain_client = { version = "0.7.0" }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
url2 = "0.0.6"
app_dirs2 = "2.5.5"
tempdir = "0.3.7"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
